MGMT-17054: TemplateVersion CRUD
Create/List/DeleteAll use the path /api/v1/templateversions:
- Create puts the fleet in the spec so that it can be created with just
  a YAML and no additional parameters.
- List and DeleteAll allow listing/deleting TemplateVersions from
  multiple fleets in an org.

Get/Delete use the path /api/v1/fleets/{fleet}/templateversions/{name}:
- They must refer to a version of a specific fleet because the name
  isn't necessarily unique.
