# api/v1alpha1/openapi.yaml
@@ -28,7 +28,7 @@ paths:
             type: string
         - name: limit
           in: query
-          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subesquent query.
+          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subsequent query.
           required: false
           schema:
             type: integer
@@ -76,7 +76,7 @@ paths:
     delete:
       tags:
         - resourcesync
-      description: delete collection of ResourceSync
+      description: delete a collection of ResourceSync
       operationId: deleteResourceSyncs
       responses:
         "200":
@@ -199,7 +199,7 @@ paths:
             type: string
         - name: limit
           in: query
-          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subesquent query.
+          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subsequent query.
           required: false
           schema:
             type: integer
@@ -247,7 +247,7 @@ paths:
     delete:
       tags:
         - repository
-      description: delete collection of Repositories
+      description: delete a collection of Repositories
       operationId: deleteRepositories
       responses:
         "200":
@@ -370,7 +370,7 @@ paths:
             type: string
         - name: limit
           in: query
-          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subesquent query.
+          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subsequent query.
           required: false
           schema:
             type: integer
@@ -421,7 +421,7 @@ paths:
     delete:
       tags:
         - device
-      description: delete collection of Devices
+      description: delete a collection of Devices
       operationId: deleteDevices
       responses:
         "200":
@@ -604,7 +604,7 @@ paths:
             type: string
         - name: limit
           in: query
-          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subesquent query.
+          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subsequent query.
           required: false
           schema:
             type: integer
@@ -649,7 +649,7 @@ paths:
     delete:
       tags:
         - enrollmentrequest
-      description: delete collection of Enrollments
+      description: delete a collection of Enrollments
       operationId: deleteEnrollmentRequests
       responses:
         "200":
@@ -867,7 +867,7 @@ paths:
             type: string
         - name: limit
           in: query
-          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subesquent query.
+          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subsequent query.
           required: false
           schema:
             type: integer
@@ -921,7 +921,7 @@ paths:
     delete:
       tags:
         - fleet
-      description: delete collection of Fleets
+      description: delete a collection of Fleets
       operationId: deleteFleets
       responses:
         "200":
@@ -1087,6 +1087,172 @@ paths:
         "404":
           description: NotFound
           content: {}
+  /api/v1/templateversions:
+    description: |
+      A TemplateVersion logically belongs to a Fleet, and so it might be natural to have
+      this API be /api/v1/fleets/{fleet}/templateversions. This would, however, restrict
+      the usage:
+      - It would not allow the creation of a TemplateVersion by applying a YAML alone,
+        because the extra fleet argument would need to be passed as well.
+      - It would not allow listing or deleting TemplateVersions from multiple fleets in
+        a single API call. For example, listing all TemplateVersions with a given label
+        regardless of Fleet.
+    get:
+      tags:
+        - templateversion
+      description: list template versions
+      operationId: listTemplateVersions
+      parameters:
+        - name: continue
+          in: query
+          description: An optional parameter to query more results from the server. The value of the paramter must match the value of the 'continue' field in the previous list response.
+          required: false
+          schema:
+            type: string
+        - name: labelSelector
+          in: query
+          description: A selector to restrict the list of returned objects by their labels. Defaults to everything.
+          schema:
+            type: string
+        - name: limit
+          in: query
+          description: The maximum number of results returned in the list response. The server will set the 'continue' field in the list response if more results exist. The continue value may then be specified as parameter in a subsequent query.
+          required: false
+          schema:
+            type: integer
+            format: int32
+        - name: owner
+          in: query
+          description: The owner of the templateversions.
+          required: false
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TemplateVersionList'
+        "400":
+          description: Bad Request
+          content: {}
+        "401":
+          description: Unauthorized
+          content: {}
+    post:
+      tags:
+        - templateversion
+      description: create a template version
+      operationId: createTemplateVersion
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TemplateVersion'
+        required: true
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TemplateVersion'
+        "400":
+          description: Bad Request
+          content: {}
+        "401":
+          description: Unauthorized
+          content: {}
+        "409":
+          description: StatusConflict
+          content: {}
+    delete:
+      tags:
+        - templateversion
+      description: delete a collection of template versions
+      operationId: deleteTemplateVersions
+      parameters:
+        - name: owner
+          in: query
+          description: The owner of the templateversions.
+          required: false
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+        "401":
+          description: Unauthorized
+          content: {}
+  /api/v1/fleets/{fleet}/templateversions/{name}:
+    get:
+      tags:
+        - templateversion
+      description: read the specified template version
+      operationId: readTemplateVersion
+      parameters:
+        - name: fleet
+          in: path
+          description: The owner of the templateversions.
+          required: true
+          schema:
+            type: string
+        - name: name
+          in: path
+          description: Name of the template version
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TemplateVersion'
+        "401":
+          description: Unauthorized
+          content: {}
+        "404":
+          description: NotFound
+          content: {}
+    delete:
+      tags:
+        - templateversion
+      description: delete a template version
+      operationId: deleteTemplateVersion
+      parameters:
+        - name: fleet
+          in: path
+          description: The owner of the templateversions.
+          required: true
+          schema:
+            type: string
+        - name: name
+          in: path
+          description: name of the template version
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TemplateVersion'
+        "401":
+          description: Unauthorized
+          content: {}
+        "404":
+          description: NotFound
+          content: {}
+
 components:
   schemas:
     Repository:
@@ -1175,59 +1341,69 @@ components:
         - metadata
         - spec
       description: Device represents a physical device.
+    GenericConfigSpec:
+      type: object
+      properties:
+        configType:
+          type: string
+        name:
+          type: string
+      discriminator:
+        propertyName: configType
+      required:
+        - configType
+        - name
     GitConfigProviderSpec:
-      type: object
-      properties:
-        name:
-          type: string
-        gitRef:
-          type: object
+      allOf:
+        - $ref: '#/components/schemas/GenericConfigSpec'
+        - type: object
           properties:
-            repoURL:
-              type: string
-            targetRevision:
-              type: string
-            path:
-              type: string
+            gitRef:
+              type: object
+              properties:
+                repository:
+                  type: string
+                  description: |
+                    The name of the repository resource to use as the sync source
+                targetRevision:
+                  type: string
+                path:
+                  type: string
+              required:
+                - repository
+                - targetRevision
+                - path
           required:
-            - repoURL
-            - targetRevision
-            - path
-      required:
-      - name
-      - gitRef
+          - gitRef
     KubernetesSecretProviderSpec:
-      type: object
-      properties:
-        name:
-          type: string
-        secretRef:
-          type: object
+      allOf:
+        - $ref: '#/components/schemas/GenericConfigSpec'
+        - type: object
           properties:
-            name:
-              type: string
-            namespace:
-              type: string
-            mountPath:
-              type: string
+            secretRef:
+              type: object
+              properties:
+                name:
+                  type: string
+                namespace:
+                  type: string
+                mountPath:
+                  type: string
+              required:
+                - namespace
+                - mountPath
           required:
-            - name
-            - namespace
-            - mountPath
-      required:
-      - name
-      - secretRef
+          - secretRef
     InlineConfigProviderSpec:
-      type: object
-      properties:
-        name:
-          type: string
-        inline:
-          type: object
-          additionalProperties: true
-      required:
-      - name
-      - inline
+      allOf:
+        - $ref: '#/components/schemas/GenericConfigSpec'
+        - type: object
+          properties:
+            inline:
+              type: object
+              additionalProperties: true
+          required:
+          - inline
     DeviceList:
       type: object
       properties:
@@ -1272,6 +1448,8 @@ components:
               - $ref: "#/components/schemas/GitConfigProviderSpec"
               - $ref: "#/components/schemas/KubernetesSecretProviderSpec"
               - $ref: "#/components/schemas/InlineConfigProviderSpec"
+            discriminator:
+              propertyName: configType
         containers:
           type: object
           properties:
@@ -1612,6 +1790,79 @@ components:
           items:
             $ref: '#/components/schemas/Condition'
       description: FleetStatus represents information about the status of a fleet. Status may trail the actual state of a fleet, especially if devices of a fleet have not contacted the management service in a while.
+    TemplateVersion:
+      type: object
+      properties:
+        apiVersion:
+          type: string
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+        kind:
+          type: string
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+        metadata:
+          $ref: '#/components/schemas/ObjectMeta'
+        spec:
+          $ref: '#/components/schemas/TemplateVersionSpec'
+        status:
+          $ref: '#/components/schemas/TemplateVersionStatus'
+      required:
+        - apiVersion
+        - kind
+        - metadata
+        - spec
+      description: TemplateVersion represents a version of a template.
+    TemplateVersionSpec:
+      type: object
+      properties:
+        fleet:
+          type: string
+          description: The fleet whose template this refers to.
+      required:
+        - fleet
+    TemplateVersionStatus:
+      type: object
+      properties:
+        os:
+          $ref: '#/components/schemas/DeviceOSSpec'
+        config:
+          type: array
+          description: List of config resources.
+          items:
+            type: object
+            oneOf:
+              - $ref: "#/components/schemas/GitConfigProviderSpec"
+              - $ref: "#/components/schemas/KubernetesSecretProviderSpec"
+              - $ref: "#/components/schemas/InlineConfigProviderSpec"
+        updatedAt:
+          type: string
+        conditions:
+          type: array
+          description: 'Current state of the device.'
+          items:
+            $ref: '#/components/schemas/Condition'
+      description: TemplateVersionStatus represents information about the status of a template version.
+    TemplateVersionList:
+      type: object
+      properties:
+        apiVersion:
+          type: string
+          description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+        kind:
+          type: string
+          description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+        metadata:
+          $ref: '#/components/schemas/ListMeta'
+        items:
+          type: array
+          description: 'List of TemplateVersions.'
+          items:
+            $ref: '#/components/schemas/TemplateVersion'
+      required:
+        - apiVersion
+        - kind
+        - metadata
+        - items
+      description: TemplateVersionList is a list of TemplateVersions.
     ListMeta:
       type: object
       properties:
@@ -1728,6 +1979,7 @@ components:
       - 'Available'            # Device
       - 'Progressing'          # Device
       - 'Degraded'             # Device
+      - 'Ready'                # TemplateVersion
       x-enum-varnames:
       - EnrollmentRequestApproved
       - RepositoryAccessible
@@ -1743,6 +1995,7 @@ components:
       - DeviceAvailable
       - DeviceProgressing
       - DeviceDegraded
+      - TemplateVersionReady
     ConditionStatus:
       type: string
       enum:
@@ -1753,3 +2006,13 @@ components:
       - 'ConditionStatusTrue'
       - 'ConditionStatusFalse'
       - 'ConditionStatusUnknown'
+    TemplateDiscriminators:
+      type: string
+      enum:
+      - 'GitConfigProviderSpec'
+      - 'KubernetesSecretProviderSpec'
+      - 'InlineConfigProviderSpec'
+      x-enum-varnames:
+      - 'TemplateDiscriminatorGitConfig'
+      - 'TemplateDiscriminatorKubernetesSecret'
+      - 'TemplateDiscriminatorInlineConfig'
